# archivebox-api-gateway

./: .env-dist  .gitignore  Dockerfile  README.md  pyproject.toml
archivebox_api/: client.py  config.py  errors.py  logs.py  server.py
maubot/: Makefile  archiveboxbot.py  base-config.yaml  maubot.yaml
